--- a/tt_core/templates/tt_core/index.html
+++ b/tt_core/templates/tt_core/index.html
@@ -1,9 +1,9 @@
 {% extends 'tt_core/mission.html' %}
 
 {% block special_text %}
-<div class="row">
+<div class="row embossed" style="margin-bottom: 1rem">
     <div class="nine columns">
-        <span class="embossed"><p>Welcome to TweakToday! You can contribute by <a href="{% url 'tt_core:contribute' %}">reading the known issues and feature requests here</a> — whether you're tech-y or not!</p></span>
+        <p>Welcome to TweakToday! You can contribute by <a href="{% url 'tt_core:contribute' %}">reading the known issues and feature requests here</a> — whether you're tech-y or not!</p>
     </div>
 </div>
 {% endblock %}
